--- a/PMSCRM/Views/TaskProcessArea/DeleteTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/DeleteTaskProcessArea.cshtml
@@ -23,6 +23,6 @@
 
     <form asp-action="DeleteConfirmed" asp-route-id="@Model.TaskProcessAreaId" method="post">
         <button type="submit" class="btn btn-delete">Delete</button>
-        <a href="/Area/ViewAreas" class="btn btn-cancel">Cancel</a>
+        <a href="/TaskProcessArea/ViewTaskProcessAreas" class="btn btn-cancel">Cancel</a>
     </form>
 </div>
