--- a/PMSCRM/Views/Customer/EditCustomer.cshtml
+++ b/PMSCRM/Views/Customer/EditCustomer.cshtml
@@ -39,6 +39,12 @@
         </div>
 
         <div class="mb-3">
+            <label for="City" class="form-label">City</label>
+            <input type="text" class="form-control" id="city" placeholder="City" name="City" value="@Model.City" required>
+            <div class="invalid-feedback">Please fill out this field.</div>
+        </div>
+
+        <div class="mb-3">
             <label for="PostalCode" class="form-label">Postal Code</label>
             <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model.PostalCode" required>
             <div class="invalid-feedback">Please enter a valid postal code.</div>
