--- a/PMSCRM/Views/Task/AddTask.cshtml
+++ b/PMSCRM/Views/Task/AddTask.cshtml
@@ -8,7 +8,7 @@
 <form class="was-validated" asp-controller="Task" asp-action="AddTask" method="post">
 
     <div class="mb-3">
-        <input type="text" class="form-control" id="taskName" placeholder="Task Name" name="Name" required>
+            <input type="text" class="form-control" id="taskName" placeholder="Task Name" name="Name" maxlength="50" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
