--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomer.cshtml
@@ -1,5 +1,7 @@
 ﻿@using PMSCRM.ViewModels
 @model IEnumerable<TaskProcessAreaUserCustomerDisplayViewModel>
+<link rel="stylesheet" href="~/css/buttons.css">
+<link rel="stylesheet" href="~/css/table.css">
 
 <div class="card shadow-sm p-4 mb-4">
     @if (ViewBag.SuccessMessage != null)
@@ -15,11 +17,11 @@
         </div>
     }
 
-    <table class="table table-sm table-bordered table-hover">
-        <thead class="table-light">
+    <table class="table-striped table-hover custom-table">
+        <thead>
             <tr>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Area" asp-route-sortDirection="@((ViewBag.CurrentSort == "Area" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Area" asp-route-sortDirection="@((ViewBag.CurrentSort == "Area" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Area
                         @if (ViewBag.CurrentSort == "Area")
                         {
@@ -27,12 +29,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Process" asp-route-sortDirection="@((ViewBag.CurrentSort == "Process" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Process" asp-route-sortDirection="@((ViewBag.CurrentSort == "Process" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Process
                         @if (ViewBag.CurrentSort == "Process")
                         {
@@ -40,12 +42,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Task" asp-route-sortDirection="@((ViewBag.CurrentSort == "Task" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Task" asp-route-sortDirection="@((ViewBag.CurrentSort == "Task" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Task
                         @if (ViewBag.CurrentSort == "Task")
                         {
@@ -53,15 +55,14 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
                     <a asp-action="ViewTaskProcessAreaUserCustomer"
                        asp-route-sortBy="User"
-                       asp-route-sortDirection="@((ViewBag.CurrentSort == "User" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")"
-                       class="text-dark">
+                       asp-route-sortDirection="@((ViewBag.CurrentSort == "User" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         User
                         @if (ViewBag.CurrentSort == "User")
                         {
@@ -69,13 +70,13 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
 
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Customer" asp-route-sortDirection="@((ViewBag.CurrentSort == "Customer" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Customer" asp-route-sortDirection="@((ViewBag.CurrentSort == "Customer" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Customer
                         @if (ViewBag.CurrentSort == "Customer")
                         {
@@ -83,12 +84,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="StartDate" asp-route-sortDirection="@((ViewBag.CurrentSort == "StartDate" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="StartDate" asp-route-sortDirection="@((ViewBag.CurrentSort == "StartDate" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Start Date
                         @if (ViewBag.CurrentSort == "StartDate")
                         {
@@ -96,12 +97,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="EndDate" asp-route-sortDirection="@((ViewBag.CurrentSort == "EndDate" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="EndDate" asp-route-sortDirection="@((ViewBag.CurrentSort == "EndDate" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         End Date
                         @if (ViewBag.CurrentSort == "EndDate")
                         {
@@ -109,12 +110,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Status" asp-route-sortDirection="@((ViewBag.CurrentSort == "Status" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Status" asp-route-sortDirection="@((ViewBag.CurrentSort == "Status" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Status
                         @if (ViewBag.CurrentSort == "Status")
                         {
@@ -122,12 +123,12 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
                 <th class="text-center">
-                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Timestamp" asp-route-sortDirection="@((ViewBag.CurrentSort == "Timestamp" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")" class="text-dark">
+                    <a asp-action="ViewTaskProcessAreaUserCustomer" asp-route-sortBy="Timestamp" asp-route-sortDirection="@((ViewBag.CurrentSort == "Timestamp" && ViewBag.CurrentSortDirection == "asc") ? "desc" : "asc")">
                         Date
                         @if (ViewBag.CurrentSort == "Timestamp")
                         {
@@ -135,10 +136,11 @@
                         }
                         else
                         {
-                            <span>▲</span> <!-- Default arrow for ascending -->
+                            <span>▲</span> 
                         }
                     </a>
                 </th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -157,10 +159,8 @@
                         <td class="text-center small">@((PMSCRM.Utilities.TaskStatus)item.Status)</td>
                         <td class="text-center small">@item.Timestamp.ToString("yyyy-MM-dd HH:mm")</td>
                         <td>
-                            <a href="@Url.Action("EditTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-primary btn-sm custom">Edit</a>
-                            <form action="@Url.Action("DeleteTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" method="post" style="display:inline;">
-                                <button type="submit" class="btn btn-danger btn-sm custom" onclick="return confirm('Are you sure you want to delete this Task Process Area User Customer?');">Delete</button>
-                            </form>
+                            <a href="@Url.Action("EditTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-edit">Edit</a>
+                            <a href="@Url.Action("DeleteTaskProcessAreaUserCustomer", "TaskProcessAreaUserCustomer", new { id = item.TaskProcessAreaUserCustomerId })" class="btn btn-delete">Delete</a>
                         </td>
                     </tr>
                 }
@@ -173,10 +173,7 @@
             }
         </tbody>
     </table>
+    <div>
+        <a asp-area="" asp-controller="TaskProcessAreaUserCustomer" asp-action="AddTaskProcessAreaUserCustomer" class="btn btn-add">Add TPAUC</a>
+    </div>
 </div>
-
-<style>
-    .custom {
-        width: 78px !important;
-    }
-</style>
