Cleaned some code in AREA etc

--- a/PMSCRM/Views/Shared/_Layout.cshtml
+++ b/PMSCRM/Views/Shared/_Layout.cshtml
@@ -222,7 +222,7 @@
                         <!-- Search Bar and Button -->
                         <div class="search-bar-container">
                             <!-- Search Bar -->
-                            <input type="text" id="searchInput" class="form-control" placeholder="Search..." aria-label="Search">
+                            <input type="text" id="searchInput" maxlength="50" class="form-control" placeholder="Search..." aria-label="Search">
 
                             <!-- Filter Dropdown Button -->
                             <div class="dropdown">
