--- a/PMSCRM/Views/Process/DeleteProcess.cshtml
+++ b/PMSCRM/Views/Process/DeleteProcess.cshtml
@@ -9,7 +9,8 @@
 <div class="card shadow-sm p-4 mb-4">
     <div class="alert alert-danger">
         <h4>Are you sure you want to delete this process?</h4>
-        <p><strong>Process Name:</strong> @Model.Name</p>
+        <p><strong>Name:</strong> @Model.Name</p>
+        <p><strong>Area:</strong> @Model.Area.Name</p>
         <p><strong>Duration:</strong> @Model.Duration min</p>
         <p><strong>Description:</strong> @(string.IsNullOrEmpty(Model.Description) ? "No description available." : Model.Description)</p>
     </div>
