--- a/PMSCRM/Views/Process/ViewProcesses.cshtml
+++ b/PMSCRM/Views/Process/ViewProcesses.cshtml
@@ -60,42 +60,23 @@
                 @foreach (var process in Model)
                 {
                     <tr>
-                        <td>
-                            <a href="/Process/Details/@process.ProcessId">
-                                @process.Name
-                            </a>
+                        <td class="text-truncate" style="max-width: 150px;">
+                            <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Name</a>
                         </td>
-                        <td>
-                            @if (process.Area != null)
-                            {
-                                @process.Area.Name
-                            }
-                            else
-                            {
-                                <span>No Area Assigned</span>
-                            }
-                        </td>
-                        <td>@process.Duration</td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(process.Description))
-                            {
-                                @if (process.Description.Length > 50)
-                                {
-                                    <span>@process.Description.Substring(0, 50)...</span>
-                                    <a href="/Process/Details/@process.ProcessId">Read More</a>
-                                }
-                                else
-                                {
-                                    <span>@process.Description</span>
-                                }
-                            }
-                            else
-                            {
-                                <span>No description available.</span>
-                            }
-                        </td>
-                        <td class="text-end">
 
+                        <td class="text-truncate" style="max-width: 150px;">
+                            <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Area.Name</a>
+                        </td>
+
+                        <td>
+                            <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Duration</a>
+                        </td>
+
+                        <td class="text-truncate" style="max-width: 300px;">
+                            <a href="/Process/Details/@process.ProcessId" style="color: black; text-decoration: none;">@process.Description</a>
+                        </td>
+
+                        <td>
                             <a href="/Process/EditProcess/@process.ProcessId" class="btn btn-edit">Edit</a>
                             <a href="/Process/DeleteProcess/@process.ProcessId" class="btn btn-delete">Delete</a>
                         </td>
