--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/AddTaskProcessAreaUserCustomer.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/AddTaskProcessAreaUserCustomer.cshtml
@@ -3,6 +3,13 @@
 <link rel="stylesheet" href="~/css/table.css">
 
 <div class="card shadow-sm p-4 mb-4">
+    @if (!string.IsNullOrEmpty(ViewBag.Message))
+    {
+        <div class="alert @(ViewBag.MessageType == "success" ? "alert-success" : "alert-danger")" role="alert">
+            @ViewBag.Message
+        </div>
+    }
+
     <label class="form-label">Select Process</label>
     <div style="max-height: 200px; overflow-y: auto; margin-bottom: 20px; border-block-end: solid; border-block-end-width: thin; border-block-end-color: lightgray">
         <table class="table table-sm table-bordered table-hover">
