--- a/PMSCRM/Views/User/DeleteUser.cshtml
+++ b/PMSCRM/Views/User/DeleteUser.cshtml
@@ -9,6 +9,7 @@
 <div class="card shadow-sm p-4 mb-4">
 <div class="alert alert-danger">
     <h4>Are you sure you want to delete this user?</h4>
+    <p><strong>Role:</strong> @Model.Role.Name</p>
     <p><strong>Email:</strong> @Model.EmailAddress</p>
     <p><strong>First Name:</strong> @Model.FirstName</p>
     <p><strong>Last Name:</strong> @Model.LastName</p>
